service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-external
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
